Update run.sh with one option to print gc logs