@@ -3,8 +3,8 @@
 echo "Run.sh..."
 
 if [ ! -f target/experiment-1.jar ]; then
-  echo "11111"
+  echo "Compiled program not found, cannot run anything..."
 else
-  echo "222"
-  java --class-path target/experiment-1.jar org.example.Main                                                                                                        130 ↵
+#  java -Xlog:gc --class-path target/experiment-1.jar org.example.Main
+  java --enable-preview --class-path target/experiment-1.jar org.example.Main
 fi
